--- a/6-test/css/style.css
+++ b/6-test/css/style.css
@@ -65,7 +65,7 @@ nav .nav-contact {
 
 nav .nav-contact a {
   background-color: #ffc424;
-  background-image: url(../image/icn_contact.png);
+  background-image: url(../img/icn_contact.png);
   background-repeat: no-repeat;
   background-position: 22px 15px;
   line-height: 50px;
