--- a/6-test/css/style.css
+++ b/6-test/css/style.css
@@ -85,3 +85,28 @@ nav li a:active {
   color: #000;
   background-color:#eee;
 }
+.container {
+  width: 960px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-bottom: 5rem;
+  background-color: #fff;
+}
+main {
+  width: 75%;
+  float: left;
+}
+aside {
+  width: 25%;
+  float: right;
+}
+main:after{
+  display: block;
+  content: "";
+  clear: both;
+}
+aside:after{
+  display: block;
+  content: "";
+  clear: both;
+}
