--- a/6-test/css/style.css
+++ b/6-test/css/style.css
@@ -147,4 +147,12 @@ main p{
   background-repeat: no-repeat;
   background-position: center 15px;
 }
+.reason-3 dl:nth-of-type(2) {
+  background-image: url(../img/image_reason3-2.png);
+  backgroung-position center 19px;
+}
+.reason-3 dl:nth-of-type(3) {
+  background-image: url(../img/image_reason3-3.png);
+  backgroung-position center 17px;
+  margin-right: 0;
 }
